<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ru.mremne</groupId>
  <artifactId>servletwork</artifactId>
  <packaging>war</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>servletwork Maven Webapp</name>
  <url>http://maven.apache.org</url>
  <properties>
      <maven.compiler.source>1.7</maven.compiler.source>
      <maven.compiler.target>1.7</maven.compiler.target>
      <servlet.api.version>2.5</servlet.api.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
      <dependency>
          <groupId>javax.servlet</groupId>
          <artifactId>servlet-api</artifactId>
          <version>${servlet.api.version}</version>
      </dependency>

  </dependencies>
  <build>
    <finalName>servletwork</finalName>
      <plugins>
          <plugin>
          <groupId>org.eclipse.jetty</groupId>
          <artifactId>jetty-maven-plugin</artifactId>
          <version>9.1.3.v20140225</version>
          <configuration>
              <scanIntervalSeconds>0</scanIntervalSeconds>
              <webApp>
                  <contextPath>/</contextPath>
              </webApp>
              <stopPort>9847</stopPort>
              <stopKey>tms-local</stopKey>
              <jvmArgs>
                  -Xmx1024m
                  -XX:MaxPermSize=512m
              </jvmArgs>
              <goal>run-forked</goal>
          </configuration>
          </plugin>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>2.3.2</version>
              <configuration>
                  <source>${maven.compiler.source}</source>
                  <target>${maven.compiler.target}</target>
              </configuration>
          </plugin>
      </plugins>
  </build>
</project>
